[package]
name = "snail_image_confuse"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Simple image confuse tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
image = "0.23.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
