[package]
name = "snail_image_obfuscate"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Simple image obfuscate tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
log = "0.4"
pretty_env_logger = "0.4"
image = "0.24"
klask = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
